force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/cgcloud__KPI_Set_KPI_Definition__c.object-meta.xml
<CustomObject>
    <description>Junction object between KPI Definition and KPI Definition Set</description>
    <label>KPI Set KPI Definition</label>
    <nameField>
        <displayFormat>KDKS-{00000000}</displayFormat>
        <label>KPI Set KPI Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Set KPI Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>