force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__KPI_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Definition__c</fullName>
    <description>Parent Object (KPI Definition)</description>
    <label>KPI Definition</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>KPI Set KPI Definitions</relationshipLabel>
    <relationshipName>KPI_Set_KPI_Definitions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>