force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__KPI_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Description__c</fullName>
    <formula>cgcloud__KPI_Definition__r.cgcloud__Description__c</formula>
    <label>KPI Description</label>
    <type>Text</type>
</CustomField>