force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set__c</fullName>
    <description>Parent object (Calculation Configuration)</description>
    <label>KPI Set</label>
    <referenceTo>cgcloud__KPI_Set__c</referenceTo>
    <relationshipLabel>KPI Set KPI Definitions</relationshipLabel>
    <relationshipName>KPI_Set_KPI_Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>