force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__KPI_Subsets__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Subsets__c</fullName>
    <label>KPI Subsets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__KPI_Subsets</valueSetName>
    </valueSet>
</CustomField>