force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__KPI_Tactic_Dependent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Tactic_Dependent__c</fullName>
    <formula>OR(ISPICKVAL(cgcloud__KPI_Definition__r.cgcloud__Scope__c , &quot;promotiontactic&quot;),ISPICKVAL(cgcloud__KPI_Definition__r.cgcloud__Scope__c , &quot;paymenttactic&quot;))</formula>
    <label>KPI Tactic Dependent</label>
    <type>Checkbox</type>
</CustomField>