force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__Manual_Input_Copy_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Input_Copy_Mode__c</fullName>
    <description>Used to define whether manual input is copied over to target promotion.</description>
    <label>Manual Input Copy Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>