force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sorting the KPI Definition in KPI set</description>
    <label>Sort</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>