force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__Sort_Subset_PSP__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort_Subset_PSP__c</fullName>
    <description>Sorting KPI Subsets with Promotion Scenario</description>
    <label>Sort Subset PSP</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>