force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__Storage_Options_Subset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Storage_Options_Subset__c</fullName>
    <description>Define subsets of kpis that can be calculated in different writeback steps.</description>
    <label>Storage Options Subset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>basic</fullName>
            </value>
            <value>
                <fullName>businessplan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>