force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__Unique_KPI_Id_for_Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_KPI_Id_for_Sort__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique KPI Id for Sort</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>