force-app/main/default/objects/cgcloud__KPI_Set_KPI_Definition__c/fields/cgcloud__Unique_Storage_Options_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Storage_Options_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Storage Options Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>